--- a/src/components/Hero/index.css
+++ b/src/components/Hero/index.css
@@ -2,10 +2,12 @@
     margin-top: 7em;
     display: flex;
     justify-content: space-between;
+    height: 80vh;
+    margin-top: 20vh !important;
 }
 .img-hero{
     width: 35vw;
-    height: 95vh;
+    height: 100%;
     object-fit: cover;
 }
 .hero-txt{
