--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -1,19 +1,18 @@
 .nav-container{
     position: fixed;
     top: 0px;
-    /*box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    */z-index: 9999;
+    z-index: 9999;
 }
 .navbar{
     padding: 1.5em 0px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between !important;
     align-items: center;
 }
 .nav-items{
     margin: 0px 15px;
 }
-.fa-bars{
+.navbar > .bg-none{
     display: none;
 }
 
@@ -22,8 +21,10 @@
     .navbar > ul, .navbar > .btn-primary{
         display: none;
     }
-    .fa-bars{
+    .navbar > .bg-none{
         display: block;
+    }
+    .fa-bars{
         font-size: 26px;
     }
     .nav-responsive{
