--- a/src/components/Features/index.css
+++ b/src/components/Features/index.css
@@ -18,3 +18,13 @@
     margin-top: 15px;
     font-size: 24px;
 }
+
+@media only screen and (max-width: 600px) {
+    .features-container{
+        flex-direction: column;
+        margin-top: -2em;
+    }
+    .icon-container{
+        margin-bottom: 2em;
+    }
+}
