--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -7,26 +7,59 @@ footer{
 footer > div > p{
     margin-top: 10px;
 }
-footer > div > input {
+.send-mail{
+    width: 25vw;
+    margin: 20px 0px;
+    height: 60px;
+    position: relative;
+}
+.send-mail > input {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    height: 100%;
     background: transparent;
     font-size: 16px;
     color: var(--fade);
     border: 2px solid var(--purple);
     border-radius: 28px;
     padding: 12px 18px;
-    margin: 20px 0px;
-    height: 58px;
 }
 .send{
+    position: absolute;
+    right: 10px;
     width: 50px;
     height: 50px;
     border-radius: 25px;
     position: relative;
-    right: 55px;
+    left: calc(100% - 55px);
+    top: 5px;
 }
+
 .footer-down{
     padding-bottom: 15px;
 }
 .connect-the-founder{
     text-align: right;
+}
+
+@media only screen and (max-width: 600px) {
+    footer{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .send-mail {
+        width: 85vw;
+    }
+    .send-mail > input {
+        width: 100%;
+    }
+    .connect-the-founder{
+        text-align: left;
+        margin-top: 25px;
+    }
+    .footer-down{
+        align-items: flex-start;
+        flex-direction: column;
+    }
 }
