error page has been added

--- a/src/components/Error/index.css
+++ b/src/components/Error/index.css
@@ -2,8 +2,17 @@
     font-size: 10em;
 }
 .error-page > h3{
-    font-size: 48px;
+    font-size: 3em;
     margin-bottom: 25px;
     width: 60vw;
     text-align: center;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .error-page > h3{
+        font-size: 2em;
+        width: 80vw;
+        text-align: center;
+    }
 }
