--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -4,10 +4,10 @@
     z-index: 9999;
 }
 .navbar{
-    padding: 1.5em 0px;
+    padding: 1.2em 0px;
     display: flex;
     justify-content: space-between !important;
-    align-items: center;
+    align-items: center !important;
 }
 .nav-items{
     margin: 0px 15px;
