--- a/src/components/Hero/index.css
+++ b/src/components/Hero/index.css
@@ -25,8 +25,10 @@
 @media only screen and (max-width: 600px) {
     .hero{
         flex-direction: column;
+        height: 100%;
+        padding-bottom: 2em;
     }
     .txt-wrapper{
-        width: 70%;
+        width: 85%;
     }
 }
