--- a/src/components/Features/index.css
+++ b/src/components/Features/index.css
@@ -1,3 +1,7 @@
+#features{
+    min-height: 100vh;
+    padding-top: 3em;
+}
 .features-wrapper{
     padding-top: 3em;
     padding-bottom: 2em;
@@ -18,6 +22,9 @@
     margin-top: 15px;
     font-size: 24px;
 }
+.icon-container{
+    width: 40%;
+}
 
 @media only screen and (max-width: 600px) {
     .features-container{
@@ -26,5 +33,8 @@
     }
     .icon-container{
         margin-bottom: 2em;
+    }
+    .icon-container{
+        width: 100%;
     }
 }
