--- a/src/components/Careers/index.css
+++ b/src/components/Careers/index.css
@@ -4,12 +4,30 @@
     margin: auto;
     padding-top: 10em;
 }
+.career-img-wrapper{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+#form{
+    display: flex;
+    align-items: center;
+}
+#form > p{
+    font-size: 45px;
+    margin-top: 20px;
+}
 .career-wrapper > h1, .career-wrapper > h4, .career-wrapper > p, .career-wrapper > h5{
     width: 85%;
     font-weight: 400;
     margin-bottom: 25px;
 }
 
+.career-wrapper > div > p{
+    font-size: 45px;
+    margin-left: 15px;
+    margin-top: 20px;
+}
 .note{
     margin-top: 35px;
 }
