--- a/src/index.css
+++ b/src/index.css
@@ -165,6 +165,9 @@ a:hover{
 .modal div{
   border: none;
 }
+.btn-switcher{
+  width: 13em;
+}
 
 @media only screen and (max-width: 600px) {
   .w-75{
