--- a/src/components/PricingComponent/index.css
+++ b/src/components/PricingComponent/index.css
@@ -20,3 +20,11 @@
     border: 8px solid var(--purple);
     border-radius: 10px !important;
 }
+@media only screen and (max-width: 600px) {
+    .card{
+        width: 100%;
+    }
+    .pricing-cards-wrapper{
+        flex-direction: column;
+    }
+}
